# petsc_miniapp

./: README.md
python_test_solver/: generate_parameters_single.py  params.json  params_light.json  postprocess_data.py  submission_script.sh
solver_for_petsc_param/: CMakeLists.txt  miniapp_solver.F90
solver_for_petsc_param/cmake/: FindPETSc.cmake
solver_for_petsc_param/tests/: amgx_Vfine_3_ok  petscrc  script_izar.sh
